# Flippy

./: .eslintignore  .eslintrc.cjs  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pytest.ini  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  epic.md  feature.md
.github/workflows/: ci.yml  labels.yml
apps/convsvc/: README.md  pyproject.toml  requirements.txt
apps/convsvc/src/convsvc/: __init__.py
apps/convsvc/tests/: test_health.py
apps/desktop/: README.md  package.json
apps/desktop/src/: main.ts
apps/web-ui/: README.md  package.json
apps/web-ui/src/: index.ts
docs/: COMPETITIVE_LANDSCAPE.md  DEFINITION_OF_DONE.md  DEPENDENCIES.md  LABELS_AND_COMPONENTS.md  PRODUCT_BRIEF.md  WORKFLOW_MAP.md
